tests/fixtures/invalid/err008_catch_star_not_last.rex
try {
  observe page "https://example.com" as $page
} catch * {
  skip
} catch Timeout {
  retry
}
